# mdev

./: .env.example  .gitignore  Cargo.toml  LICENSE.md  package-lock.json  package.json  readme.md  turbo.json
api/: Cargo.toml
api/src/: app_state.rs  db.rs  engine.rs  executor.rs  main.rs  models.rs  runtime_env.rs
api/src/engine/: mod.rs  runtime.rs  shared_capability_lifecycle.rs  transitions.rs
api/src/engine/capabilities/: apply_changeset.rs  binding_specs.rs  changeset_schema.rs  compile_commands.rs  context_export.rs  filesystem.rs  git_patch_payload.rs  mod.rs  operator_checkpoint.rs  registry.rs  review_validation.rs
api/src/engine/capabilities/changeset/: apply.rs  mod.rs  persistence.rs  schema.rs
api/src/engine/capabilities/gateway_model/: changeset.rs  mod.rs  sync.rs
api/src/engine/capabilities/git/: git.rs  types.rs
api/src/engine/capabilities/inference/: mod.rs  model_output.rs  panel.rs  session.rs  stage_support.rs
api/src/engine/capabilities/planner/: apply.rs  fragment.rs  lookup.rs  mod.rs  models.rs  normalization.rs  schema.rs
api/src/engine/capabilities/sap/: common.rs  export.rs  import.rs  mod.rs  state.rs  (+1 more)
api/src/engine/governance/: context.rs  decisions.rs  evaluate.rs  hooks.rs  mod.rs  rules.rs  scopes.rs  signals.rs
api/src/engine/stages/: capability_contract.rs  code_stage.rs  compile_stage.rs  design_stage.rs  merge_patches_stage.rs  mod.rs  review_stage.rs  sap_export_stage.rs  sap_import_stage.rs  sap_syntax_stage.rs  stage_utility.rs
api/src/inference/: mod.rs
api/src/inference/api/: oai.rs
api/src/inference/browser/: adapter.rs
api/src/migration/: egui_bridge.rs  mod.rs
api/src/routes/: capabilities.rs  changesets.rs  event_chains.rs  events.rs  filesystem.rs  health.rs  mod.rs  planner.rs  repo_tree.rs  review.rs  runs.rs  sap.rs  settings.rs  supervisor.rs  templates.rs  workflow_builder.rs  workflow_scope.rs
api/src/supervisor/: mod.rs  models.rs  patches.rs  planner_schema.rs  repo_snapshot.rs  workflow_spawn.rs
(+132 files in other folders)
