[package]
name = "devApp"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

anyhow = "1"
eframe = "0.27"
egui = "0.27"
egui_extras = { version = "0.27", features = ["syntect"] }
regex = "1"
rfd = "0.15"
open = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
time = { version = "0.3", features = ["std", "formatting"] }